# try-pybind11

mandelbrot-set/: plot.py
mandelbrot-set/cxx/: CMakeLists.txt  main.cxx  mandelbrot-set.h
mandelbrot-set/python/: main.py  mandelbrot_set.py
try-pybind11/: CMakeLists.txt  _b  test.py
try-pybind11/cmake/: pybind11.cmake  range-v3.cmake
try-pybind11/src/: main.cxx
